cppcheck_report.txt
app/backend/src/room/User.hpp:27:20: style:inconclusive: Member variable 'User::chat_room_name' is in the wrong place in the initializer list. [initializerList]
 const std::string chat_room_name;
                   ^
app/backend/src/room/User.hpp:14:146: note: Member variable 'User::chat_room_name' is in the wrong place in the initializer list.
 User(drogon::SubscriberID id, drogon::WebSocketConnectionPtr conn, const std::string chat_room_name, UserType type) : id(id), connection(conn), chat_room_name(chat_room_name), type(type){};
                                                                                                                                                 ^
app/backend/src/room/User.hpp:27:20: note: Member variable 'User::chat_room_name' is in the wrong place in the initializer list.
 const std::string chat_room_name;
                   ^
app/backend/src/room/Room.hpp:15:2: style: Class 'Room' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
 Room(std::shared_ptr<User> owner) : owner(owner) {
 ^
app/backend/src/room/RoomManager.hpp:54:17: warning: Identical inner 'if' condition is always true. [identicalInnerCondition]
  if (pinstance == nullptr) {
                ^
app/backend/src/room/RoomManager.hpp:52:16: note: outer condition: pinstance==nullptr
 if (pinstance == nullptr) {
               ^
app/backend/src/room/RoomManager.hpp:54:17: note: identical inner condition: pinstance==nullptr
  if (pinstance == nullptr) {
                ^
app/backend/src/room/User.hpp:14:87: performance: Function parameter 'chat_room_name' should be passed by const reference. [passedByValue]
 User(drogon::SubscriberID id, drogon::WebSocketConnectionPtr conn, const std::string chat_room_name, UserType type) : id(id), connection(conn), chat_room_name(chat_room_name), type(type){};
                                                                                      ^
app/backend/src/controllers/WebSocketChat.hpp:111:127: style: Parameter 'user' can be declared with const [constParameter]
void WebSocketChat::handleUserCommand(const drogon::WebSocketConnectionPtr& wsConnPtr, const std::string& message_data, User& user, std::shared_ptr<Room>& room) {
                                                                                                                              ^
app/backend/src/controllers/WebSocketChat.hpp:111:156: style: Parameter 'room' can be declared with const [constParameter]
void WebSocketChat::handleUserCommand(const drogon::WebSocketConnectionPtr& wsConnPtr, const std::string& message_data, User& user, std::shared_ptr<Room>& room) {
                                                                                                                                                           ^
app/raspberry_pi/repository/packages/r/rplidar/rplidar/src/RPLidar.cpp:577:8: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
    if (maxBufMeas != 0)
       ^
app/raspberry_pi/src/car/system/movement/wheels/FrontWheel.cxx:27:3: warning: Member variable 'FrontWheel::angle' is not initialized in the constructor. [uninitMemberVar]
  FrontWheel(std::shared_ptr<PCA9685> pwm, int channel) : pwm(pwm), channel(channel) {
  ^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:22:3: warning: Member variable 'RearWheel::cali_forward' is not initialized in the constructor. [uninitMemberVar]
  RearWheel(std::shared_ptr<PCA9685> pwm, std::unique_ptr<TB6612> motor) :
  ^
app/raspberry_pi/src/car/system/movement/MovementSystem.cxx:37:8: performance:inconclusive: Technically the member function 'car::system::movement::MovementSystem::start' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  void start()
       ^
app/raspberry_pi/src/car/system/movement/MovementSystem.cxx:41:8: performance:inconclusive: Technically the member function 'car::system::movement::MovementSystem::terminate' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  void terminate() {
       ^
app/raspberry_pi/src/car/system/movement/MovementSystem.cxx:44:8: performance:inconclusive: Technically the member function 'car::system::movement::MovementSystem::move' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  void move(const MoveCommand& move_command) {
       ^
app/raspberry_pi/src/car/system/movement/MovementSystem.cxx:48:8: performance:inconclusive: Technically the member function 'car::system::movement::MovementSystem::turn' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  void turn(const TurnCommand& turn_command) {
       ^
app/raspberry_pi/src/car/display/CarConsole.cxx:23:13: performance:inconclusive: Technically the member function 'car::display::CarConsole::MainComponent' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  Component MainComponent(std::function<void()> show_exit_modal) {
            ^
app/raspberry_pi/src/car/display/CarConsole.cxx:42:13: performance:inconclusive: Technically the member function 'car::display::CarConsole::ExitModalComponent' can be static (but you may consider moving to unnamed namespace). [functionStatic]
  Component ExitModalComponent(std::function<void()> hide_exit_modal,
            ^
app/raspberry_pi/src/car/system/messaging/MessagingSystem.cxx:29:3: style: Class 'MessagingSystem' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
  MessagingSystem(const std::string& websocket_url) : websocket_url(websocket_url) {
  ^
app/raspberry_pi/src/car/display/CarConsole.cxx:61:3: style: Class 'CarConsole' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
  CarConsole(std::unique_ptr<CarSystem> car_system) : car_system(std::move(car_system)) {
  ^
app/raspberry_pi/src/car/system/lidar/LidarScanner.cxx:20:3: style: Class 'LidarScanner' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
  LidarScanner(const std::string &lidar_port) : lidar(RPLidar::create(lidar_port).value())
  ^
app/raspberry_pi/src/car/system/messaging/commands/MoveCommand.cxx:9:7: style: struct member 'MoveCommand::speed' is never used. [unusedStructMember]
  int speed;
      ^
app/raspberry_pi/src/car/system/messaging/commands/TurnCommand.cxx:9:9: style: struct member 'TurnCommand::angle' is never used. [unusedStructMember]
  float angle;
        ^
app/raspberry_pi/tests/tb6612/test_rear_wheels.cpp:21:5: warning: Member variable 'BackWheels::cali_forward_A' is not initialized in the constructor. [uninitMemberVar]
    BackWheels(const int &bus_number = 1) : left_wheel(std::make_unique<TB6612>(Motor_A, PWM_A)),
    ^
app/raspberry_pi/tests/tb6612/test_rear_wheels.cpp:21:5: warning: Member variable 'BackWheels::cali_forward_B' is not initialized in the constructor. [uninitMemberVar]
    BackWheels(const int &bus_number = 1) : left_wheel(std::make_unique<TB6612>(Motor_A, PWM_A)),
    ^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:71:0: style: The function 'caliLeft' is never used. [unusedFunction]

^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:78:0: style: The function 'caliOK' is never used. [unusedFunction]

^
app/raspberry_pi/tests/tb6612/test_rear_wheels.cpp:93:0: style: The function 'caliRight' is never used. [unusedFunction]

^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:64:0: style: The function 'calibration' is never used. [unusedFunction]

^
app/raspberry_pi/src/car/system/movement/wheels/FrontWheel.cxx:38:0: style: The function 'getAngle' is never used. [unusedFunction]

^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:46:0: style: The function 'getSpeed' is never used. [unusedFunction]

^
app/raspberry_pi/src/car/system/movement/wheels/RearWheel.cxx:58:0: style: The function 'ready' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

